# rust-sudoku-solver

./: .gitignore  Cargo.toml  LICENSE.md  README.md
examples/hello/: Cargo.toml
examples/hello/src/: main.rs
examples/sudoku_solving/: Cargo.toml
examples/sudoku_solving/src/: command.rs  main.rs
lib/: Cargo.toml
lib/src/: board.rs  lib.rs  visitor.rs
lib/src/visualization/: ascii.rs
lib/sudoku/: Cargo.toml
lib/sudoku/src/: board.rs  game.rs  game_state.rs  lib.rs  macros.rs  solver.rs  state.rs  visualization.rs
lib/sudoku/src/game/: bitset.rs  game.rs  game_state.rs  indexbitset.rs  move.rs  placement.rs  prelude.rs  state.rs  valuebitset.rs
lib/sudoku/src/solver/: candidates.rs  default_solver.rs  find_move_candidates.rs  macros.rs  move_candidates.rs  naked_twins.rs  set_of_move_candidates.rs  simple_moves.rs  steps.rs  typed_move.rs
lib/sudoku/src/solver/candidates/: find_move_candidates.rs  move_candidates.rs  set_of_move_candidates.rs
lib/sudoku/src/solver/steps/: hidden_singles.rs  lone_singles.rs  naked_twins.rs  simple_moves.rs
lib/sudoku/src/visualization/: ascii.rs  ascii_board.rs  ascii_group.rs
lib/visitor/: Cargo.toml
lib/visitor/src/: lib.rs
