[package]
name = "sudoku_solving"
version = "0.1.0"
authors = ["Markus Mayer"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sudoku = { path = "../../lib/sudoku" }
visitor = { path = "../../lib/visitor" }
log = "0.4.8"
env_logger = "0.7.1"